# methane_noise_forcing

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/firn_kernel/: firn_model_gisp2.yaml  firn_model_neem.yaml  firn_model_wais.yaml  gamma_gisp2-like.yaml  gamma_gisp2.yaml  gamma_neem-like.yaml  gamma_wais-like.yaml  gamma_wais.yaml  log_logistic_wais.yaml
configs/noise/: two_timescale.yaml  two_timescale_ar1_0-1.yaml  two_timescale_ar1_1.yaml  two_timescale_ar1_10.yaml  two_timescale_ar1_100.yaml  two_timescale_ar1_1000.yaml  white_noise.yaml  white_noise_ar1.yaml
configs/sampling/: gisp2.yaml  neem.yaml  wdc05a.yaml  wdc06a.yaml
data/firn_filters/: age_dist_raw.csv  agedist_from_christo.xls  firn_filter_gisp2.csv  firn_filter_neem.csv  firn_filter_wais.csv  firn_filters.csv
data/observations/: README.txt
data/oh_forcing/: gfdl_OH_t_surf_monthly.nc  oh_forcing.nc
data/variance_calculation/: methane_variance_timescales.nc  turner2019_variances.csv
notebooks/: BAS_presentation.ipynb  OH_forcing.ipynb  annual_growth_rate.ipynb  compare_power_spectra_to_white_noise.ipynb  explore_mitchell2013.ipynb  explore_rhodes2013.ipynb  fit_timescale.ipynb  fit_timescale_variance_dist.ipynb  noise_integration.ipynb  power_spectrum_high_frequency.ipynb  power_spectrum_test.ipynb  proistosescu_notes.ipynb  test.ipynb  test_closed_form_variance.ipynb  test_firn_class.ipynb  test_firn_functions.ipynb  test_mitchell2011_sampling_smoothing.ipynb  test_time_stepping.ipynb
notebooks/EDA/: compare_mitchell_rhodes.ipynb  detrend_wdc06a.ipynb  explore_OH_variability.ipynb  explore_empirical_firn_filters.ipynb  explore_epifanio2020.ipynb  explore_mitchell2013.ipynb  explore_modern_methane.ipynb  explore_rhodes2013.ipynb  explore_sapart2012.ipynb  test_mitchell2011_sampling_smoothing.ipynb
notebooks/explore_spectral/: compare_power_spectra_to_white_noise.ipynb  forcing_intensity_vs_variance.ipynb  power_spectrum_high_frequency.ipynb  sampling_artifacts.ipynb
notebooks/isotope/: test_isotope.ipynb
scripts/: calculate_noise_power_spectra.py  calculate_obs_power_spectra.py  calculate_two_timescale_variance.py  generate_obs_power_spectra.py  generate_two_timescale.py  generate_two_timescale_ar1.py  generate_white_noise_ar1.py  sample_noise.py  smooth_noise.py
(+69 files in other folders)
