[project]
authors = [{name = "Eric", email = "eric.mei2000@gmail.com"}]
name = "methane_noise_forcing"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["pyleoclim>=0.8.1,<0.9", "llvmlite", "multitaper>=1.2.0,<2", "hydra-core>=1.3.2,<2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-64"]

[tool.pixi.pypi-dependencies]
methane_noise_forcing = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.2.5,<3"
jupyterlab = ">=4.4.1,<5"
scipy = ">=1.15.2,<2"
xarray = ">=2025.6.1,<2026"
matplotlib = ">=3.10.1,<4"
pillow = ">=11.1.0,<12"
astropy = ">=7.1.0,<8"
mscorefonts = ">=0.0.1,<0.0.2"
netcdf4 = ">=1.7.2,<2"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
dev = { features = ["lint"], solve-group = "default" }

[dependency-groups]
test = ["pytest"]
lint = ["ruff"]

[tool.ruff]
line-length = 88
lint.ignore = ["E501"]
lint.select = ["D"]
lint.pydocstyle.convention = "numpy"
